Start of Folia Conversion (no actual logic)