@@ -1,7 +1,7 @@
 package me.minebuilders.clearlag.commands;
 
 import me.minebuilders.clearlag.Callback;
-import me.minebuilders.clearlag.Clearlag;
+import me.minebuilders.clearlag.ClearLag;
 import me.minebuilders.clearlag.Util;
 import me.minebuilders.clearlag.language.LanguageValue;
 import me.minebuilders.clearlag.language.messages.Message;
@@ -29,42 +29,36 @@ public class TickSamplerCmd extends CommandModule {
     protected void run(final CommandSender sender, String[] args) {
 
         int sampleTickCycles = 1;
-
         if (args.length > 0 && Util.isInteger(args[0])) {
             sampleTickCycles = Integer.parseInt(args[0]);
-
-            if (sampleTickCycles <= 0)
+            if (sampleTickCycles <= 0) {
                 sampleTickCycles = 1;
+            }
         }
 
         final Thread serverThread = Thread.currentThread();
-
         final Callback<Collection<Integer>> callback;
 
-        if (args.length > 1 && args[1].equalsIgnoreCase("raw"))
+        if (args.length > 1 && args[1].equalsIgnoreCase("raw")) {
             callback = (sample) -> {
-
                 lang.sendMessage("rawheader", sender);
-
                 final Message rawLineMessage = lang.getMessage("rawprint");
-
                 for (Integer time : sample) {
                     rawLineMessage.sendMessage(sender, (Util.getChatColorByNumberLength(time, 40, 50).toString() + time));
                 }
             };
-
-        else
+        } else {
             callback = (samples) -> {
-
                 final IntSummaryStatistics stats = samples.stream()
                         .mapToInt((x) -> x)
                         .summaryStatistics();
 
                 int spikes = 0;
-
-                for (int sample : samples)
-                    if (sample > 50)
+                for (int sample : samples) {
+                    if (sample > 50) {
                         ++spikes;
+                    }
+                }
 
                 lang.sendMessage("print", sender,
                         (Util.getChatColorByNumberLength(stats.getMax(), 40, 50).toString() + stats.getMax()),
@@ -72,13 +66,11 @@ public class TickSamplerCmd extends CommandModule {
                         (Util.getChatColorByNumberLength((int) Math.round(stats.getAverage()), 40, 50).toString() + Math.round(stats.getAverage())),
                         (Util.getChatColorByNumberLength(spikes, 1, 2).toString() + spikes)
                 );
-
             };
 
-        new TimingThread(serverThread, callback, sampleTickCycles).start();
-
-        lang.sendMessage("start", sender, serverThread.getName(), sampleTickCycles);
-
+            new TimingThread(serverThread, callback, sampleTickCycles).start();
+            lang.sendMessage("start", sender, serverThread.getName(), sampleTickCycles);
+        }
     }
 
     private static class TimingThread extends Thread {
@@ -109,20 +101,15 @@ public class TickSamplerCmd extends CommandModule {
                 }
             };
 
-            tickWatcher.runTaskTimer(Clearlag.getInstance(), 0L, 0L);
+            tickWatcher.runTaskTimer(ClearLag.getInstance(), 0L, 0L);
         }
 
         @Override
         public void run() {
-
             try {
-
                 while (sampleTickCycles-- > 0) {
-
                     final int startTick = tick.get();
-
                     final long timestamp = System.currentTimeMillis();
-
                     while (watchingThread.getState() != State.TIMED_WAITING && tick.get() == startTick) {
                         Thread.sleep(1);
                     }
@@ -134,10 +121,8 @@ public class TickSamplerCmd extends CommandModule {
                     }
                 }
 
-                fullTickTimings.remove(0);
-
+                fullTickTimings.removeFirst();
                 Util.postToMainThread(() -> callback.call(fullTickTimings));
-
             } catch (InterruptedException e) {
                 e.printStackTrace();
             } finally {
